# Trecioji-Uzduotis

./: .gitignore  CMakeLists.txt  Cfunctions.cpp  Cfunctions.h  README.md  Second_Task.cpp  Second_Task.vcxproj  Second_Task.vcxproj.filters  UI.cpp  UI.h  config.h  functions.cpp  functions.h  humanClass.cpp  humanClass.h  kursiokai.txt  randomEngine.h  studentClass.cpp  studentClass.h  timerClass.h
Debug/: Second_Task.pch  (+2 more)
Second_Task/: .gitignore  CMakeLists.txt  Second_Task.vcxproj  Second_Task.vcxproj.filters  config.h
Second_Task/Doxygen/html/: _u_i_8h_source.html  _vector_8h_source.html  annotated.html  class_human-members.html  class_human.html  class_random_engine-members.html  class_random_engine.html  class_student-members.html  class_student.html  class_timer-members.html  class_timer.html  class_vector-members.html  class_vector.html  class_vector_1_1iterator-members.html  class_vector_1_1iterator.html  classdescending-members.html  classdescending.html  classes.html  config_8h_source.html  files.html  functions_8h_source.html  hierarchy.html  human_class_8h_source.html  random_engine_8h_source.html  student_class_8h_source.html  timer_class_8h_source.html
Second_Task/Doxygen/html/search/: all_0.js  classes_2.js  classes_3.js  classes_6.js  searchdata.js
Second_Task/Doxygen/latex/: annotated.tex  class_human.tex  class_random_engine.tex  class_student.tex  class_timer.tex  class_vector.tex  class_vector_1_1iterator.tex  classdescending.tex  hierarchy.tex  refman.tex
Second_Task/src/: Second_Task.cpp  UI.cpp  UI.h  Vector.h  functions.cpp  functions.h  humanClass.cpp  humanClass.h  randomEngine.h  studentClass.cpp  studentClass.h  timerClass.h
Student_Test/: CMakeLists.txt  Student_Test.vcxproj  test.cpp
(+24 files in other folders)
